--- a/portfolio.html
+++ b/portfolio.html
@@ -1162,7 +1162,7 @@
       </ul>
       <!-- SKRYPT-->
 <script>
-  document.addEventListener('DOMContentLoaded', function() {
+ document.addEventListener('DOMContentLoaded', function() {
   const currentPage = window.location.pathname.split('/').pop().replace(/\.html$/, '');
   const portfolioList = document.getElementById('portfolioList');
   
@@ -1176,19 +1176,12 @@
       
       portfolioList.innerHTML = pages.map((page, index) => {
         const isActive = page === currentPage;
-        return `
-          <li>
-            <a class="portfolio-hover-item" href="/portfolio/${page}" ${isActive ? 'data-active="true"' : ''}>
-              <h1 class="portfolio-hover-item-title">
-                <span class="portfolio-hover-item-content">${index + 1}</span>
-              </h1>
-            </a>
-          </li>
-        `;
+        return `<li><a class="portfolio-hover-item" href="/portfolio/${page}" ${isActive ? 'data-active="true"' : ''}><h1 class="portfolio-hover-item-title"><span class="portfolio-hover-item-content">${index + 1}</span></h1></a></li>`;
       }).join('');
     })
     .catch(error => console.error('Error loading portfolio list:', error));
 });
+
 </script>
     </div>
   </div>
