--- a/oferta.html
+++ b/oferta.html
@@ -1192,7 +1192,7 @@
   }
 }
   .fe-block-667ab506948a0857cb2b1a4f {
-    grid-area: 1/2/8/8;
+    grid-area: 1/2/8/10;
     z-index: 2;
     @media (max-width: 767px) {
     }
@@ -1361,7 +1361,8 @@
         <div
           class="fluid-image-container sqs-image-content"
           data-shape-mask="circle"
-          style="overflow: hidden;clip-path: url(#667ab506948a0857cb2b1a4f);-webkit-clip-path: url(#667ab506948a0857cb2b1a4f);position: relative;width: 100%;height: 100%;"
+          style="overflow: hidden;position: relative;width: 100%;
+  aspect-ratio: 1 / 1; margin:10px;"
         >
               <div class="content-fill">
             <img data-stretch="false" data-src="/images/wnetrza.jpg" data-image="/images/wnetrza.jpg" data-image-dimensions="1920x1080" data-image-focal-point="0.5,0.5" alt="" data-load="false" elementtiming="system-image-block" src="/images/wnetrza.jpg" width="1920" height="1080" alt="" sizes="100vw" style="display:block;object-fit: cover; object-position: 50% 50%" srcset="/images/wnetrza.jpg?format=100w 100w, /images/wnetrza.jpg?format=300w 300w, /images/wnetrza.jpg?format=500w 500w, /images/wnetrza.jpg?format=750w 750w, /images/wnetrza.jpg?format=1000w 1000w, /images/wnetrza.jpg?format=1500w 1500w, /images/wnetrza.jpg?format=2500w 2500w" loading="lazy" decoding="async" data-loader="sqs">
