--- a/oferta.html
+++ b/oferta.html
@@ -1361,7 +1361,7 @@
         <div
           class="fluid-image-container sqs-image-content"
           data-shape-mask="circle"
-          style="hidden; clip-path: url(#667ab506948a0857cb2b1a4f);-webkit-clip-path: url(#667ab506948a0857cb2b1a4f);overflow: hidden;position: relative;width: 100%;
+          style="hidden; clip-path: url(#667ab506948a0857cb2b1a4f);-webkit-clip-path: url(#667ab506948a0857cb2b1a4f);overflow: hidden;position: relative;
   aspect-ratio: 1 / 1; margin:10px;"
         >
               <div class="content-fill">
