--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1159,7 +1159,7 @@ TYTUŁ
 <!-- SKRYPT -->
 <script> 
   const items = [
-    { content: 'test_film.mp4' },
+    { content: 'test_film2.mp4' },
     { content: 'bluszczanska_salon.jpg' },
     { content: 'bluszczanska_lazienka.jpg' },
     { content: 'bluszczanska_gabinet.jpg' },
