--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1180,9 +1180,7 @@ if (items.length && isVideo(items[0].content)) {
   // Remove the video link from the portfolio list.
   const videoItem = items.shift(); 
 
-  // Create the video container element.
-  const videoContainer = document.createElement('div');
-  videoContainer.classList.add('portfolio-video');
+const videoContainer = document.createElement('div');
 
   // Insert the video element.
   videoContainer.innerHTML = `
@@ -1315,7 +1313,7 @@ if (items.length && isVideo(items[0].content)) {
     </svg>
   </div>
 </a>        
-      <!-- SKRYPT -->
+      <!-- S K R Y P T DRUGI -->
     <script>
       
  document.addEventListener('DOMContentLoaded', function() {
