--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1141,15 +1141,14 @@ TYTUŁ
   /* Video player styling */
 .rounded-video {
   width: 100%;
-  max-width: 800px;
   border-radius: 15px;  /* Rounded corners */
-  display: block;
   margin: 20px auto;    /* Default (mobile) margin */
+  height: auto; /* Maintain aspect ratio */
+  display: block; /* Remove unwanted inline spacing */
 }
 .video-container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 100vw; /* Full screen width */
+  box-sizing: border-box; /* Ensures padding doesn’t add extra width */
 }
   
 /* Desktop-specific margin adjustments */
@@ -1195,19 +1194,12 @@ const videoContainer = document.createElement('div');
 videoContainer.className = 'video-container';
   // Insert the video element.
   videoContainer.innerHTML = `
-    <video controls class="rounded-video">
+    <video controls autoplay muted loop playsinline class="rounded-video">
       <source src="/portfolio/images/${videoItem.content}" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   `;
-
     container_parent.prepend(videoContainer);
-  // Prepend the video container so it appears before the other items.
-  // Change '.portfolio-display' to match your actual container selector.
-  const displayContainer = document.querySelector('.portfolio-display');
-  if (displayContainer) {
-    displayContainer.prepend(videoContainer);
-  }
 }
   
   
