--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1147,14 +1147,14 @@ TYTUŁ
   display: block; /* Remove unwanted inline spacing */
 }
 .video-container{
-  width: 100vw; /* Full screen width */
+  width: 92vw; /* Full screen width */
   box-sizing: border-box; /* Ensures padding doesn’t add extra width */
 }
   
 /* Desktop-specific margin adjustments */
 @media (min-width: 768px) {
-  .rounded-video {
-    margin: 40px auto;
+  .video-container {
+    width: 65vw; /* Full screen width */
   }
 }
 </style>
