--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1195,7 +1195,7 @@ const videoContainer = document.createElement('div');
 videoContainer.className = 'video-container';
   // Insert the video element.
   videoContainer.innerHTML = `
-    <video controls autoplay muted loop playsinline class="rounded-video">
+    <video autoplay muted loop playsinline class="rounded-video">
       <source src="/portfolio/images/${videoItem.content}" type="video/mp4">
       Your browser does not support the video tag.
     </video>
