--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- This is Squarespace. --><!-- pracowniabofajnietu -->
+   <!-- pracowniabofajnietu -->
 <base href="">
 <meta charset="utf-8" />
 <title>BoFajnieTu</title>
