--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -5,11 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <base href="">
 <meta charset="utf-8" />
-<title>NUMER &mdash; BoFajnieTu</title>
+<title>Portfolio &mdash; BoFajnieTu</title>
 <meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" />
 <link rel="icon" type="image/png" href="/images/FavIcon.png"/>
 <meta property="og:site_name" content="BoFajnieTu"/>
-<meta property="og:title" content="NUMER &mdash; BoFajnieTu"/>
+<meta property="og:title" content="Portfolio &mdash; BoFajnieTu"/>
 <meta property="og:url" content="https://pracowniabofajnietu.squarespace.com/portfolio/2"/>
 <meta property="og:type" content="website"/>
 <meta property="og:image" content="/images/LogoB50.png"/>
@@ -20,7 +20,7 @@
 <meta itemprop="thumbnailUrl" content="/images/LogoB50.png"/>
 <link rel="image_src" href="/images/LogoB50.png" />
 <meta itemprop="image" content="/images/LogoB50.png"/>
-<meta name="twitter:title" content="NUMER — BoFajnieTu"/>
+<meta name="twitter:title" content="Portfolio — BoFajnieTu"/>
 <meta name="twitter:image" content="/images/LogoB50.png"/>
 <meta name="twitter:card" content="summary"/>
 <meta name="description" content="" />
