--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1092,7 +1092,7 @@ TYTUŁ
   .custom-gallery__items {
     display: flex;
     flex-direction: column;
-    gap: var(--custom-gallery-spacing);
+    /*gap: var(--custom-gallery-spacing); */
   }
 
   .custom-gallery__item {
@@ -1155,7 +1155,7 @@ TYTUŁ
 /* Desktop-specific margin adjustments */
 @media (min-width: 768px) {
   .video-container {
-    padding: 100px;
+    padding: 0 20vw;
   }
 }
 </style>
