--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1142,7 +1142,6 @@ TYTUŁ
 .rounded-video {
   width: 100%;
   border-radius: 15px;  /* Rounded corners */
-  margin: 20px auto;    /* Default (mobile) margin */
   height: auto; /* Maintain aspect ratio */
   display: block; /* Remove unwanted inline spacing */
 }
@@ -1156,6 +1155,7 @@ TYTUŁ
 @media (min-width: 768px) {
   .video-container {
     padding: 0 20vw;
+    padding-bottom: 20px;
   }
 }
 </style>
