--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1146,14 +1146,14 @@ TYTUŁ
   display: block; /* Remove unwanted inline spacing */
 }
 .video-container{
-  width: 100vw; /* Full screen width */
   box-sizing: border-box; /* Ensures padding doesn’t add extra width */
-  padding: var(--custom-gallery-padding);
+    padding-bottom: 16px;
 }
   
 /* Desktop-specific margin adjustments */
 @media (min-width: 768px) {
   .video-container {
+    width: 100vw; /* Full screen width */
     padding: 0 20vw;
     padding-bottom: 20px;
   }
