--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -43,6 +43,12 @@
 <!-- End of Headers -->
       <link rel="stylesheet" type="text/css" href="/site.css">
   </head>
+
+<style>
+  body {
+    overflow-x: hidden;
+}
+</style>
   <body
     id="item-6679e2179d8c9b3efb317043"
     class="
