--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -10,13 +10,12 @@
 <link rel="icon" type="image/png" href="/images/FavIcon.png"/>
 <meta property="og:site_name" content="BoFajnieTu"/>
 <meta property="og:title" content="Portfolio &mdash; BoFajnieTu"/>
-<meta property="og:url" content="https://pracowniabofajnietu.squarespace.com/portfolio/2"/>
 <meta property="og:type" content="website"/>
 <meta property="og:image" content="/images/LogoB50.png"/>
 <meta property="og:image:width" content="640"/>
 <meta property="og:image:height" content="480"/>
-<meta itemprop="name" content="example — BoFajnieTu"/>
-<meta itemprop="url" content="https://pracowniabofajnietu.squarespace.com/portfolio/2"/>
+<meta itemprop="name" content="Portfolio — BoFajnieTu"/>
+<meta itemprop="url" content="https://pracowniabofajnietu.squarespace.com/portfolio"/>
 <meta itemprop="thumbnailUrl" content="/images/LogoB50.png"/>
 <link rel="image_src" href="/images/LogoB50.png" />
 <meta itemprop="image" content="/images/LogoB50.png"/>
@@ -24,7 +23,6 @@
 <meta name="twitter:image" content="/images/LogoB50.png"/>
 <meta name="twitter:card" content="summary"/>
 <meta name="description" content="" />
-<link rel="preconnect" href="https://images.squarespace-cdn.com">
 <script type="text/javascript" src="//use.typekit.net/ik/d-K0Zx8yla-si7kXWOZhmVWB86P5FOG8heXxpmnvztJfenMgfFHN4UJLFRbh52jhWDjhFDqXjDMU52bDwRb3wDm85A4KFAJUFUGMJ6U3ScNt-AuyOAozicIK2cUXjkuKdhszdcqlwQSuH6qJtKGbMg62JMJ7fbKzMsMMeMb6MKGHfO2IMsMMeM96MKG4fJCgIMMjgkMfH6qJtkGbMg6FJMJ7fbK3MsMMeMt6MKG4fJ3gIMMjIPMfH6qJxkCbMs6IJMJ7fbRrHUMgeMt6MTMgTraCC3j.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 <script type="text/javascript" crossorigin="anonymous" defer="defer" nomodule="nomodule" src="//assets.squarespace.com/@sqs/polyfiller/1.6/legacy.js"></script>
@@ -1175,7 +1173,6 @@ TYTUŁ
 <!-- SKRYPT -->
 <script> 
   const items = [
-    { content: 'test_film_4.mp4' },
     { content: 'bluszczanska_salon.jpg' },
     { content: 'bluszczanska_lazienka.jpg' },
     { content: 'bluszczanska_gabinet.jpg' },
