--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1069,7 +1069,7 @@
   
 <h2 style="white-space:pre-wrap;"><!--
 TYTUŁ
--->Mieszkanie w&nbsp;Warszawie, ul.&nbsp;Bluszczańska<!--
+-->Tutaj się wpisuje tytuł.<!--
 TYTUŁ
 --></h2>
 </div>
@@ -1173,12 +1173,11 @@ TYTUŁ
 <!-- SKRYPT -->
 <script> 
   const items = [
-    { content: 'bluszczanska_salon.jpg' },
-    { content: 'bluszczanska_lazienka.jpg' },
-    { content: 'bluszczanska_gabinet.jpg' },
-    { content: 'bluszczanska_p5.jpg' },
-    { content: 'bluszczanska_t4.jpg' },
-    { content: 'bluszczanska_sypialnia.jpg' }
+    { content: 'obrazek1.jpg' },
+    { content: 'obrazek2.jpg' },
+    { content: 'obrazek3.jpg' },
+    { content: 'obrazek4.jpg' },
+    { content: 'obrazek5.jpg' }
   ];
 
   const container_parent = document.getElementById('custom-gallery-container');
