--- a/portfolio/bluszczanska.html
+++ b/portfolio/bluszczanska.html
@@ -1221,7 +1221,7 @@ videoContainer.className = 'video-container';
       const img = document.createElement('img');
       img.src = "/portfolio/images/" + item.content;
       img.className = 'custom-gallery__image';
-      img.alt = `Project ${index + 1}`;
+      img.alt = `Obraz ${index + 1}`;
       element.appendChild(img);
     } else {
       const textBox = document.createElement('div');
