--- a/portfolio/mieszkanie_planety.html
+++ b/portfolio/mieszkanie_planety.html
@@ -1069,7 +1069,7 @@
   
 <h2 style="white-space:pre-wrap;"><!--
 TYTUŁ
--->Tutaj się wpisuje tytuł.<!--
+-->Mieszkanie w&nbsp;Józefosławiu, ul.&nbsp;Planety<!--
 TYTUŁ
 --></h2>
 </div>
@@ -1173,11 +1173,7 @@ TYTUŁ
 <!-- SKRYPT -->
 <script> 
   const items = [
-    { content: 'obrazek1.jpg' },
-    { content: 'obrazek2.jpg' },
-    { content: 'obrazek3.jpg' },
-    { content: 'obrazek4.jpg' },
-    { content: 'obrazek5.jpg' }
+    { content: 'mieszkanie_planety.jpg' }
   ];
 
   const container_parent = document.getElementById('custom-gallery-container');
