--- a/portfolio/balkon.html
+++ b/portfolio/balkon.html
@@ -1069,7 +1069,7 @@
   
 <h2 style="white-space:pre-wrap;"><!--
 TYTUŁ
--->Tutaj się wpisuje tytuł.<!--
+-->Balkon w&nbsp;Warszawie<!--
 TYTUŁ
 --></h2>
 </div>
@@ -1173,11 +1173,13 @@ TYTUŁ
 <!-- SKRYPT -->
 <script> 
   const items = [
-    { content: 'obrazek1.jpg' },
-    { content: 'obrazek2.jpg' },
-    { content: 'obrazek3.jpg' },
-    { content: 'obrazek4.jpg' },
-    { content: 'obrazek5.jpg' }
+    { content: 'balkon_1.jpg' },
+    { content: 'balkon_2.jpg' },
+    { content: 'balkon_3.jpg' },
+    { content: 'balkon_4.jpg' },
+    { content: 'balkon_5.jpg' },
+    { content: 'balkon_6.jpg' },
+    { content: 'balkon_rośliny.jpg' }
   ];
 
   const container_parent = document.getElementById('custom-gallery-container');
