--- a/index.html
+++ b/index.html
@@ -1412,22 +1412,20 @@
 }
 /* Create the circular cutout */
 .circle-cutout {
-  width: 200px; /* Circle diameter */
-  height: 200px;
-  border-radius: 50%;
-  overflow: hidden; /* Clip the image to the circle */
+  /* Maximize size while staying square */
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  aspect-ratio: 1; /* Ensure circle stays 1:1 */
+  overflow: hidden;
   position: relative;
 }
 /* Style the image to fill the circle */
 .circle-cutout img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); /* Center the image */
-  min-width: 100%; /* Force the smaller dimension to match the circle's size */
-  min-height: 100%;
-  width: auto; /* Maintain aspect ratio */
-  height: auto;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Prevents squishing, scales image to cover the circle */
 }
         
 </style><div class="fluid-engine fe-66795b35e8ae70143c4a5e64"><div class="fe-block fe-block-e55f73c850a320c8a206" style="font-family: 'Arial';">
