--- a/index.html
+++ b/index.html
@@ -1412,12 +1412,10 @@
 }
 /* Create the circular cutout */
 .circle-cutout {
-  /* Maximize size while staying square */
-  max-width: 100%;
-  max-height: 100%;
-  width: auto;
-  height: auto;
+  width: min(100vw, 100vh); /* Use the smaller of the two dimensions */
+  height: min(100vw, 100vh); /* Use the smaller of the two dimensions */
   aspect-ratio: 1; /* Ensure circle stays 1:1 */
+  /* Circle styling */
   overflow: hidden;
   position: relative;
 }
