--- a/index.html
+++ b/index.html
@@ -1409,22 +1409,24 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
 }
 /* Create the circular cutout */
 .circle-cutout {
-/* Use the smaller of the parent's width/height */
-  width: min(100%, 100%); /* Takes the smaller of parent's width/height */
-  height: min(100%, 100%);
-  aspect-ratio: 1; /* Force a perfect square (becomes a circle via border-radius) */
-  /* Circle styling */
+  max-width: 100%;
+  max-height: 100%;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
   overflow: hidden;
-  position: relative;
+  flex-shrink: 0;
 }
 /* Style the image to fill the circle */
 .circle-cutout img {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Prevents squishing */
+  object-fit: contain;
+  object-position: center;
 }
         
 </style><div class="fluid-engine fe-66795b35e8ae70143c4a5e64"><div class="fe-block fe-block-e55f73c850a320c8a206" style="font-family: 'Arial';">
@@ -1455,7 +1457,6 @@
                 <div class="circle-cutout">
     <img src="/images/PaulaFotel.jpg" alt="Pracownia BoFajnieTu">
   </div>
-             <div class="fluidImageOverlay"></div>
               </div>
         </div>
       </div>
