--- a/index.html
+++ b/index.html
@@ -1414,19 +1414,27 @@
 }
 /* Create the circular cutout */
 .circle-cutout {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
   aspect-ratio: 1/1;
   border-radius: 50%;
   overflow: hidden;
   flex-shrink: 0;
+  position: relative;
 }
 /* Style the image to fill the circle */
 .circle-cutout img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  object-position: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  max-width: none;
+  max-height: none;
+  object-fit: cover;
 }
         
 </style><div class="fluid-engine fe-66795b35e8ae70143c4a5e64"><div class="fe-block fe-block-e55f73c850a320c8a206" style="font-family: 'Arial';">
