--- a/index.html
+++ b/index.html
@@ -1406,35 +1406,28 @@
   }
         
   .circular-parent {
-  display: flex;
+display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
+  position: relative;
 }
 /* Create the circular cutout */
 .circle-cutout {
-  width: 100%;
-  height: 100%;
-  aspect-ratio: 1/1;
+  --size: min(100%, 100%); /* Will be interpreted as min(parent-width, parent-height) */
+  width: var(--size);
+  height: var(--size);
   border-radius: 50%;
   overflow: hidden;
   flex-shrink: 0;
-  position: relative;
 }
 /* Style the image to fill the circle */
 .circle-cutout img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  max-width: none;
-  max-height: none;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+  object-position: center;
 }
         
 </style><div class="fluid-engine fe-66795b35e8ae70143c4a5e64"><div class="fe-block fe-block-e55f73c850a320c8a206" style="font-family: 'Arial';">
