--- a/index.html
+++ b/index.html
@@ -1332,6 +1332,7 @@
     grid-area: 4/2/10/10;
     z-index: 0;
     @media (max-width: 767px) {
+      aspect-ratio: 1;
     }
   }
   .fe-block-46603503d7993896da27 .sqs-block {
@@ -1521,7 +1522,7 @@
   // Initialize the circular image container with padding
   const bftContainer = new BFTImageContainer(
     document.querySelector('.bft-circular-container'),
-    15 // Set your desired padding here (e.g., 20px)
+    8 // Set your desired padding here (e.g., 20px)
   );
 </script>
                 
