--- a/index.html
+++ b/index.html
@@ -1308,6 +1308,8 @@
     grid-area: 1/2/4/10;
     z-index: 6;
     @media (max-width: 767px) {
+      margin-left: 1rem;
+      margin-top: 0.5rem;
     }
   }
   .fe-block-e55f73c850a320c8a206 .sqs-block {
