--- a/portfolio/balkon.html
+++ b/portfolio/balkon.html
@@ -1173,7 +1173,7 @@ TYTUŁ
 <!-- SKRYPT -->
 <script> 
   const items = [
-    { content: 'balkon_1.jpg' },
+    { content: 'balkon.jpg' },
     { content: 'balkon_2.jpg' },
     { content: 'balkon_3.jpg' },
     { content: 'balkon_4.jpg' },
