--- a/portfolio/bluszczanska.html
+++ b/portfolio/bluszczanska.html
@@ -1173,7 +1173,7 @@ TYTUŁ
 <!-- SKRYPT -->
 <script> 
   const items = [
-    { content: 'bluszczanska_salon.jpg' },
+    { content: 'bluszczanska.jpg' },
     { content: 'bluszczanska_lazienka.jpg' },
     { content: 'bluszczanska_gabinet.jpg' },
     { content: 'bluszczanska_p5.jpg' },
