--- a/portfolio/kijowska.html
+++ b/portfolio/kijowska.html
@@ -1173,7 +1173,7 @@ TYTUŁ
 <!-- SKRYPT -->
 <script> 
   const items = [
-    { content: 'kijowska_ogrod.jpg' }
+    { content: 'kijowska.jpg' }
   ];
 
   const container_parent = document.getElementById('custom-gallery-container');
