--- a/portfolio/taras_planety.html
+++ b/portfolio/taras_planety.html
@@ -1173,7 +1173,7 @@ TYTUŁ
 <!-- SKRYPT -->
 <script> 
   const items = [
-    { content: 'taras_planety_1.jpg' },
+    { content: 'taras_planety.jpg' },
     { content: 'taras_planety_2.jpg' },
     { content: 'taras_planety_3.jpg' },
     { content: 'taras_planety_4.jpg' },
