--- a/portfolio-old.html
+++ b/portfolio-old.html
@@ -1187,7 +1187,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
     images[currentActive].addEventListener('transitionend', handleTransitionEnd);
   }
-
+/*
   // Padding calculation (with debounce)
   let resizeTimeout;
 function setPadding() {
@@ -1202,7 +1202,14 @@ function setPadding() {
   content.style.paddingTop = `${headerRect.height}px`;
   content.style.paddingBottom = `${footerRect.height}px`;
 }
+  
+  window.addEventListener('resize', () => {
+    clearTimeout(resizeTimeout);
+    resizeTimeout = setTimeout(setPadding, 100);
+  });
+  setPadding();
 });
+*/
 </script>      
     </div>
   </div>
