--- a/portfolio.html
+++ b/portfolio.html
@@ -1108,6 +1108,9 @@
 .background-image.active {
   opacity: 1;
 }
+  .portfolio-hover-item-title {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
 </style>
 <!-- SKRYPT -->
 <script>
