--- a/portfolio.html
+++ b/portfolio.html
@@ -1109,7 +1109,11 @@
   opacity: 1;
 }
   .portfolio-hover-item-title {
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  transition: opacity 0.5s ease-in-out;
+}
+    .portfolio-hover-item:hover .portfolio-hover-item-title span {
+  opacity: 1;
 }
 </style>
 <!-- SKRYPT -->
