--- a/portfolio.html
+++ b/portfolio.html
@@ -1108,7 +1108,7 @@
 .background-image.active {
   opacity: 1;
 }
-  .portfolio-hover-item-title {
+  .portfolio-hover-item-title span {
   text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   transition: opacity 0.5s ease-in-out;
 }
