--- a/portfolio.html
+++ b/portfolio.html
@@ -1111,6 +1111,7 @@
   .portfolio-hover-item-title span {
   text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   transition: opacity 0.5s ease-in-out;
+  opacity: 0.5;
 }
     .portfolio-hover-item:hover .portfolio-hover-item-title span {
   opacity: 1;
