--- a/portfolio.html
+++ b/portfolio.html
@@ -1103,6 +1103,7 @@
   object-fit: cover;
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
+  filter: brightness(0.65) blur(4px) saturate(120%);
 }
 
 .background-image.active {
@@ -1111,7 +1112,7 @@
   .portfolio-hover-item-title span {
   text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   transition: opacity 0.5s ease-in-out;
-  opacity: 0.5;
+  opacity: 0.75;
 }
     .portfolio-hover-item:hover .portfolio-hover-item-title span {
   opacity: 1;
