--- a/portfolio.html
+++ b/portfolio.html
@@ -1091,6 +1091,7 @@
 /* Background images container */
 .background-container {
   z-index: 1;
+  background: #000;
 }
 
 /* Individual background images */
@@ -1103,13 +1104,17 @@
   object-fit: cover;
   transition: opacity 0.5s ease-in-out;
   filter: brightness(0.65) blur(4px) saturate(120%);
-  opacity: 0; /* Start hidden */
+  opacity: 1;
   z-index: 1; /* Base z-index */
 }
 
 .background-image.active {
-  opacity: 1;
-  z-index: 2; /* Active image should be on top */
+  z-index: 2; /* Active image on top layer */
+  opacity: 1; /* Maintain full opacity */
+}
+  /* Only the incoming image animates */
+.background-image:not(.active) {
+  transition: none; /* Prevent transitions on inactive images */
 }
   .portfolio-hover-item-title span {
   text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
@@ -1184,23 +1189,23 @@ document.addEventListener('DOMContentLoaded', function() {
   // Transition function
 function transitionToIndex(newIndex) {
   if (isTransitioning || newIndex === currentActive) return;
-
+  
   isTransitioning = true;
   const prevActive = currentActive;
   currentActive = newIndex;
 
-  // Bring new image to the top layer
-  images[currentActive].style.zIndex = 2;
+  // Set up new image before transition
+  images[currentActive].style.zIndex = 2; // Bring to top
+  images[currentActive].style.opacity = 0; // Start transparent
+  
+  // Force layout recalculation
+  void images[currentActive].offsetHeight;
 
-  // Fade in the new image
+  // Start transition
   images[currentActive].style.opacity = 1;
 
-  // Fade out the old image
-  images[prevActive].style.opacity = 0;
-
-  // Wait for the transition to complete
   const handleTransitionEnd = () => {
-    // Reset z-index of the old image after transition
+    // Reset previous image's z-index after transition
     images[prevActive].style.zIndex = 1;
     isTransitioning = false;
     images[currentActive].removeEventListener('transitionend', handleTransitionEnd);
